--- a/labsdomain/package.json
+++ b/labsdomain/package.json
@@ -1,7 +1,7 @@
 {
   "name": "labsdomain",
   "version": "0.1.0",
-  "private": true,
+  "": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
